Implement live tv feature in api server and cineverse frontend
