# lib/api-spec/openapi.yaml
@@ -114,6 +114,12 @@ paths:
           schema:
             type: string
             pattern: "^[a-z]{2}$"
+        - name: country
+          in: query
+          description: ISO 3166-1 alpha-2 country of origin
+          schema:
+            type: string
+            pattern: "^[a-zA-Z]{2}$"
         - name: genre
           in: query
           schema:
